--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/vercel": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remix": "^1.1.3"
   },
   "devDependencies": {
