--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
@@ -26,6 +27,7 @@
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.5",
+    "prisma": "^3.9.1",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.1.2"
   },
